--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
   <link rel="stylesheet" href="css/produtos.css">
   <link rel="stylesheet" href="css/carrinho.css">
   <link rel="icon" href="img/logo.png">
+  <!-- SEO básico -->
+<title>Shelf Distribuidora</title>
+<meta name="description" content="Shelf Distribuidora - Produtos odontológicos, hospitalares e de conveniência. Qualidade e confiança em Manaus.">
+<meta name="keywords" content="shelf distribuidora, odontologia, hospitalar, produtos de saúde, descartáveis, manaus">
+<meta name="author" content="Shelf Distribuidora">
+
+<!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+<meta property="og:title" content="Shelf Distribuidora">
+<meta property="og:description" content="Produtos odontológicos, hospitalares e de conveniência com qualidade e confiança.">
+<meta property="og:url" content="https://shelfdistribuidora.com.br/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://shelfdistribuidora.com.br/img/logo.png"> <!-- coloque o link da sua logo/banner -->
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Shelf Distribuidora">
+<meta name="twitter:description" content="Produtos odontológicos, hospitalares e de conveniência.">
+<meta name="twitter:image" content="https://shelfdistribuidora.com.br/img/logo.png">
+
+<!-- Favicon -->
+<link rel="icon" href="img/logo.png" type="image/png">
 
   <style>
     main { margin-bottom: 75px; }
@@ -471,3 +492,4 @@
 
 </body>
 </html>
+
