--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/produtos.css">
   <link rel="stylesheet" href="css/carrinho.css">
   <link rel="stylesheet" href="css/propostas.css">
+  <link rel="stylesheet" href="css/pedidos.css">
   <link rel="icon" href="img/logo.png">
 
   <style>
@@ -150,7 +151,7 @@
       { hash: '#produtos', file: 'main/produtos.html', js: 'javascript/produto.js' },
       { hash: '#carrinho', file: 'main/carrinho.html', js: 'javascript/carrinho.js' },
       { hash: '#propostas',file: 'main/propostas.html', js: 'javascript/propostas.js' },
-      { hash: '#pedidos',  file: 'main/pedidos.html' }
+      { hash: '#pedidos',  file: 'main/pedidos.html', js: 'javascript/pedidos.js'  }
     ];
 
     let currentTeardown = null;
