--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
     <nav class="categorias-menu" aria-label="Categorias de Produtos">
       <!-- Categorias geradas automaticamente quando #produtos carrega -->
     </nav>
+    <div class="print-toolbar">
+    <button id="prn-visiveis">🖨️ Imprimir visíveis</button>
+    <button id="prn-todos">🖨️ Imprimir todos</button>
+  </div>
   </header>
 
   <main></main>
