--- a/index.html
+++ b/index.html
@@ -167,6 +167,17 @@
         <ion-icon name="print" aria-hidden="true"></ion-icon>
         Imprimir todos
       </button>
+      <div class="print-toolbar">
+      <button id="prn-visiveis-no-price" class="print-btn">
+        <ion-icon name="print-outline" aria-hidden="true"></ion-icon>
+        Imprimir visíveis sem preços
+      </button>
+
+      <button id="prn-todos-no-price" class="print-btn">
+        <ion-icon name="print" aria-hidden="true"></ion-icon>
+        Imprimir todos sem preços
+      </button>
+      
     </div>
   </header>
 
