--- a/main/marcas.html
+++ b/main/marcas.html
@@ -268,7 +268,225 @@
                         Dica rápida: escreveu <b>OFF</b>, vê ofertas. Apagou, volta a ver tudo.
                     </p>
                 </div>
+                      <!-- AVISO: BONIFICAÇÕES (dinâmico por vendedor) -->
+      <div id="aviso-bonus"
+        style="margin:16px 0; border:1px solid #e6eaef; border-radius:14px; background:#fff; box-shadow:0 4px 20px rgba(0,0,0,.04);">
+        <style>
+          #aviso-bonus {
+            font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+            color: #1f2d2a
+          }
+
+          #aviso-bonus .wrap {
+            display: flex;
+            gap: 18px;
+            padding: 16px 18px;
+            align-items: flex-start
+          }
+
+          #aviso-bonus .img {
+            flex: 0 0 120px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #f3f8f5;
+            border-radius: 12px;
+            padding: 10px
+          }
+
+          #aviso-bonus .title {
+            font-weight: 800;
+            font-size: 18px;
+            color: #0f5132;
+            margin: 2px 0 6px
+          }
+
+          #aviso-bonus .chip {
+            background: #d1fae5;
+            color: #065f46;
+            padding: 2px 8px;
+            border-radius: 999px;
+            font-size: 12px;
+            border: 1px solid #a7f3d0
+          }
+
+          #aviso-bonus p {
+            margin: 6px 0 10px;
+            line-height: 1.45
+          }
+
+          #aviso-bonus ul {
+            margin: 0;
+            padding: 0 0 0 18px
+          }
+
+          #aviso-bonus li {
+            margin: 6px 0;
+          }
+
+          #aviso-bonus .total {
+            margin-top: 10px;
+            font-weight: 800;
+            color: #0f5132
+          }
+
+          #aviso-bonus .note {
+            font-size: 12px;
+            color: #5e6a67;
+            margin-top: 6px
+          }
+
+          @media (max-width:720px) {
+            #aviso-bonus .wrap {
+              flex-direction: column
+            }
+
+            #aviso-bonus .img {
+              width: 100%
+            }
+          }
+        </style>
+
+        <div class="wrap">
+          <div class="img" aria-hidden="true">
+            <!-- selo/ilustração -->
+            <svg viewBox="0 0 128 96" width="96" height="72" role="img" aria-label="Bonificações">
+              <defs>
+                <linearGradient id="g-bonus" x1="0" x2="1">
+                  <stop offset="0" stop-color="#22c55e" />
+                  <stop offset="1" stop-color="#0ea5e9" />
+                </linearGradient>
+              </defs>
+              <rect x="8" y="12" rx="10" width="112" height="72" fill="#fff" stroke="#cfe3d6" />
+              <path d="M20 64h88" stroke="#cfe3d6" />
+              <circle cx="40" cy="40" r="16" fill="url(#g-bonus)" />
+              <path d="M34 40l4 4 8-8" stroke="#fff" stroke-width="3" fill="none" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <rect x="60" y="32" rx="3" width="40" height="6" fill="#e6f7ee" />
+              <rect x="60" y="44" rx="3" width="36" height="6" fill="#e6f7ee" />
+            </svg>
+          </div>
+
+          <div class="txt">
+            <div class="title">
+              Bonificações do mês
+              <span id="bonus-chip" class="chip">Vendedor</span>
+            </div>
+            <p>As metas abaixo são aplicadas conforme o seu perfil.</p>
+            <ul id="bonus-list">
+              <!-- itens inseridos via JS -->
+            </ul>
+            <div id="bonus-total" class="total"></div>
+            <p class="note">Critérios válidos para pedidos dentro do período vigente e respeitando os mínimos por
+              pedido.</p>
+          </div>
+        </div>
+      </div>
+
+      <script>
+        (function () {
+          // Lê o vendedor do localStorage em possíveis formatos
+          function getVendedorFromLS() {
+            try {
+              const raw = localStorage.getItem("usuario_shelf");
+              if (!raw) return null;
+              const data = JSON.parse(raw);
+
+              // formato direto: { id, tipo, usuario, ... }
+              if (data && typeof data === "object" && ("id" in data || "tipo" in data || "usuario" in data)) {
+                return { id: String(data.id ?? ""), tipo: String(data.tipo ?? "").toLowerCase(), nome: data.usuario ?? "" };
+              }
+              // formato agrupado por chave (ex.: CPF na raiz)
+              const keys = Object.keys(data || {});
+              if (keys.length) {
+                const k = keys[0];
+                const v = data[k] || {};
+                return { id: String(v.id ?? ""), tipo: String(v.tipo ?? "").toLowerCase(), nome: v.usuario ?? "" };
+              }
+            } catch (e) { }
+            return null;
+          }
+
+          // Regras
+          const regras = {
+            // por TIPO
+            tipo: {
+              varejo: {
+                chip: "Varejo",
+                itens: [
+                  "Faz 30 coberturas de clientes já cadastrados (pedido mínimo R$ 200) → +R$ 300",
+                  "Cadastro de 20 novos clientes com venda gerada (pedido mínimo R$ 200) → +R$ 400",
+                  "Alcança a meta de R$ 25.000,00 → +R$ 400",
+                  "Vende R$ 4.000 em SKUs prioritários → +R$ 300"
+                ],
+                total: "Totalizando R$ 1.400 em bonificações"
+              },
+              grandes: {
+                chip: "Grandes Contas",
+                itens: [
+                  "Cadastro de 10 novos clientes com venda gerada (pedido mínimo R$300) → +R$ 200",
+                  "Alcança a meta de R$55.000,00 → +R$ 500",
+                  "Cadastro de nova rede com CNPJ Matriz + filiais → +R$ 500",
+                  "Vende R$ 4.000 em SKUs prioritários → +R$ 200"
+                ],
+                total: "Totalizando R$ 1.400 em bonificações"
+              }
+            },
+            // por ID (sobrepõe o tipo)
+            id: {
+              "825720218": {
+                chip: "ID: 825720218",
+                itens: [
+                  "Cadastro de 10 novos clientes com venda gerada (pedido mínimo R$300) → +R$ 200",
+                  "Alcança a meta de R$70.000,00 → +R$ 500",
+                  "Cadastro de nova rede com CNPJ Matriz + filiais → +R$ 500",
+                  "Vende R$ 10.000 em SKUs prioritários → +R$ 200"
+                ],
+                total: "Totalizando R$ 1.400 em bonificações"
+              },
+              "821382109": {
+                chip: "ID: 821382109",
+                itens: [
+                  "Cadastro de 10 novos clientes com venda gerada (pedido mínimo R$300) → +R$ 200",
+                  "Alcança a meta de R$120.000,00 → +R$ 500",
+                  "Cadastro de nova rede com CNPJ Matriz + filiais → +R$ 500",
+                  "Vende R$ 10.000 em SKUs prioritários → +R$ 200"
+                ],
+                total: "Totalizando R$ 1.400 em bonificações"
+              }
+            }
+          };
+
+          // Monta o aviso
+          function renderBonus() {
+            const box = document.getElementById("aviso-bonus");
+            if (!box) return;
+
+            const vend = getVendedorFromLS();
+            if (!vend) { box.style.display = "none"; return; }
+
+            const regra = (vend.id && regras.id[vend.id])
+              || (vend.tipo && regras.tipo[vend.tipo])
+              || null;
+
+            if (!regra) { box.style.display = "none"; return; }
+
+            // Preenche UI
+            const ul = box.querySelector("#bonus-list");
+            const chip = box.querySelector("#bonus-chip");
+            const total = box.querySelector("#bonus-total");
+
+            chip.textContent = regra.chip;
+            ul.innerHTML = regra.itens.map(txt => `<li>${txt}</li>`).join("");
+            total.textContent = regra.total;
+          }
+
+          renderBonus();
+        })();
+      </script>
+
             </div>
         </div>
     </div>
 </main>
+
