--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     nav.style.setProperty('--items', items.length);
 
     const routes = [
-      { hash: '#marcas', file: 'main/marcas.html' },
+      { hash: '#marcas', file: 'main/marcas.html', js: 'javascript/marcas.js' },
       { hash: '#produtos', file: 'main/produtos.html', js: 'javascript/produto.js' },
       { hash: '#carrinho', file: 'main/carrinho.html', js: 'javascript/carrinho.js' },
       { hash: '#propostas', file: 'main/propostas.html', js: 'javascript/propostas.js' },
@@ -563,5 +563,6 @@
   </script>
 
 </body>
+
 
 </html>
